<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/bg_gradient_drawable"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.activity.WeatherCurrentActivity">

    <TextView
        android:id="@+id/tv_name_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="14dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/name" />

    <TextView
        android:id="@+id/tv_region"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/region"
        app:layout_constraintTop_toBottomOf="@id/tv_name_location"
        app:layout_constraintStart_toStartOf="@id/tv_name_location"/>

    <TextView
        android:id="@+id/tv_current_temp"
        android:layout_marginTop="8dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="60sp"
        android:textColor="@color/white"
        android:text="@string/temp"
        app:layout_constraintStart_toStartOf="@+id/tv_region"
        app:layout_constraintTop_toBottomOf="@+id/tv_region" />

    <TextView
        android:id="@+id/tv_feels_like_text"
        android:textColor="@color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/feels_like_text"
        app:layout_constraintStart_toStartOf="@+id/tv_current_temp"
        app:layout_constraintTop_toBottomOf="@+id/tv_current_temp" />

    <ImageView
        android:id="@+id/iv_current_temp"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginHorizontal="14dp"
        android:contentDescription="@string/current_condition"
        app:layout_constraintBottom_toBottomOf="@+id/tv_current_temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_current_temp"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="14dp"
        android:text="@string/current_condition"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/tv_feels_like_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_feels_like_text" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_wind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginHorizontal="14dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cv_pressure"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_wind_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/tv_wind_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:text="@string/wind"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_wind_speed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_wind_title" />

            <ImageView
                android:id="@+id/iv_wind_speed"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/wind_speed_icon_desc"
                android:src="@drawable/ic_wind_speed_48"
                app:layout_constraintBottom_toBottomOf="@+id/tv_wind_speed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_wind_speed_48" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_pressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginBottom="14dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/cv_humidity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/tv_pressure_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/pressure_title"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_pressure"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/air_pressure"
                android:textSize="28sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_pressure_title" />

            <ImageView
                android:id="@+id/iv_pressure"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/wind_speed_icon_desc"
                android:src="@drawable/ic_air_pressure_48"
                app:layout_constraintBottom_toBottomOf="@+id/tv_pressure"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_air_pressure_48" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_humidity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginHorizontal="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/tv_humidity_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/humidity_title"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_humidity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/humidity"
                android:textColor="@color/black"
                android:textSize="28sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_humidity_title" />

            <ImageView
                android:id="@+id/iv_humidity"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/wind_speed_icon_desc"
                android:src="@drawable/ic_humidity_48"
                app:layout_constraintBottom_toBottomOf="@+id/tv_humidity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/ic_humidity_48" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>